# KARMA-general

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
karma/: __init__.py
karma/config/: settings.py
karma/core/: pipeline.py
